GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  ptx -S no longer infloops for a pattern which returns zero-length matches.
  [the bug dates back to the initial implementation]

  shred --remove will again repeatedly rename files with shortening names
  to attempt to hide the original length of the file name.
  [bug introduced in coreutils-8.28]

  stty no longer crashes when processing settings with -F also specified.
  [bug introduced in fileutils-4.0]

  timeout will again notice its managed command exiting, even when
  invoked with blocked CHLD signal, or in a narrow window where
  this CHLD signal from the exiting child was missed.  In each case
  timeout would have then waited for the time limit to expire.
  [bug introduced in coreutils-8.27]

** Build-related

  Default man pages are now distributed which are used if perl is
  not available on the build system, or when cross compiling.


* Noteworthy changes in release 8.28 (2017-09-01) [stable]

** Bug fixes

  cp and mv now merely warn about any failure to preserve symlink ownership.
  Before, cp (without -p) would exit with a failure status, and a cross-device
  mv would leave such symlinks behind in the source file system.
  [the bug dates back to the initial implementation]

  When creating numbered backups, cp, install, ln, and mv now avoid
  races that could lose backup data in unlikely circumstances.  Since
  the fix relies on the renameat2 system call of Linux kernel 3.15 and
  later, the races are still present on other platforms.
  [the bug dates back to the initial implementation]

  cp, install, ln, and mv no longer lose data when asked to copy a
  backup file to its original via a differently-spelled file name.
  E.g., 'rm -f a a~; : > a; echo data > a~; cp --backup=simple a~ ./a'
  now fails instead of losing the data.
  [the bug dates back to the initial implementation]
